calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/CalloutSource__c.field-meta.xml
<CustomField>
    <fullName>CalloutSource__c</fullName>
    <label>Callout Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>