calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/RequestHeadersJson__c.field-meta.xml
<CustomField>
    <fullName>RequestHeadersJson__c</fullName>
    <label>Request Headers Json</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>