calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/RequestMethod__c.field-meta.xml
<CustomField>
    <fullName>RequestMethod__c</fullName>
    <label>Request Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>