calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/ResponseHandler__c.field-meta.xml
<CustomField>
    <fullName>ResponseHandler__c</fullName>
    <label>Response Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>