calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <label>Retry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>