calloutEngine/force-app/main/default/objects/CalloutLog__c/fields/RetrySource__c.field-meta.xml
<CustomField>
    <fullName>RetrySource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retry Source</label>
    <referenceTo>CalloutLog__c</referenceTo>
    <relationshipLabel>Callout Logs</relationshipLabel>
    <relationshipName>Retries</relationshipName>
    <type>Lookup</type>
</CustomField>