calloutEngine/force-app/main/default/objects/CalloutLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CalloutSource__c</columns>
    <columns>Endpoint__c</columns>
    <columns>RetrySource__c</columns>
    <columns>Status__c</columns>
    <columns>Retry__c</columns>
    <columns>RetryCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>